tests/src/frontend/syntax/invalid/annotation_argument.sk
@annot(42)
fun main(): void {
  void
}
